# geratikz

./: README.md  aiohttp_server.py  api_test_output.txt  async_server.py  basic_http_server.py  basic_test.py  debug.out  debug_minimal.py  debug_server.py  flask_server.py  hello.py  http_client_test.py  http_test.py  minimal_server.py  minimal_test.py  modified_server.py  network_test.py  openai_test.py  pyproject.toml  run_server.sh  server.out  server.pid  simple_fastapi.py  simple_server.py  simple_test.py  socket_diagnostic.py  socket_test.py  test_api.py  test_import.py  test_key.py  test_minimal.py  test_server.py  test_server_5000.py  test_server_all.py  wsgi_server.py
src/: main.py
templates/: index.html  process_evolution.html
